src/main/java/org/example/videoclub/errors/GeneroNoEncontradoException.java
package org.example.videoclub.errors;

public class GeneroNoEncontradoException extends Exception{

    public GeneroNoEncontradoException(String message) {
        super(message);
    }

}
